--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,6 @@
-@import “tailwindcss”;
+@import "tailwindcss";
 
 @theme {
-–font-display: “Inter”, “Helvetica”, “sans-serif”;
+--font-display: "Inter", "Helvetica", "sans-serif";
 }
+
